--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+nginx-ip2location-7.0.0
+=======================
+Added supports to IP2Location-C-7.0.0
+
 nginx-ip2location-1.0
 =====================
 First public release.
